apps/whoami-media/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.lab.emc2.build`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: default-headers
  tls:
    # This must match the certificate secretName!
    #secretName: lab-emc2-build-staging-tls
    secretName: lab-emc2-build-tls
