apps/whoami-media/lab-redirect.yaml
---
# This one doesn't seem to register in the web UI... wrong resource?
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lab-redirect
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`*.lab.emc2.build`)
      kind: Rule
      services:
        - name: lab-redirect
          port: 80
      middlewares: []
  #tls:
    # This must match the certificate secretName!
  #  secretName: lab-emc2-build-tls

---
# Taken from media stack, will it work?
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect-scheme@kubernetescrd
    #traefik.ingress.kubernetes.io/router.tls.certresolver: le
  creationTimestamp: null
  name: lab-redirect-media
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  # Apr 30 2025:
  #- host: "*.lab.emc2.build" # results in 'No domain found in rule HostRegexp'
  - host: plex.lab.emc2.build # curls 404, no logs in either media or lab
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lab-redirect
            port:
              number: 443


---
apiVersion: v1
kind: Service
metadata:
  name: lab-redirect
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.10.95
  ports:
    - port: 443
      targetPort: 443
